--- a/src/scss/page/_applications.scss
+++ b/src/scss/page/_applications.scss
@@ -202,13 +202,13 @@
             padding: 0.5rem 1.5rem;
             h2{
                 font-size: 1.5rem;
-                color: #505050;
+                color: #2F353D;
                 margin-bottom: 0.5rem;
-                font-weight: border;
+                font-weight: bolder;
             }
             p{
                 font-size: 0.875rem;
-                color: #505050;
+                color: #2F353D;
                 margin-bottom: 1rem;
             }
         }
