--- a/src/scss/page/_home.scss
+++ b/src/scss/page/_home.scss
@@ -26,7 +26,7 @@
             background-position: 47% center;
             background-size: cover;
             z-index: 4;
-            animation: star-sky-1 2.5s linear infinite;//
+            animation: star-sky-1 4s linear infinite;//
         }
         &#{-bgLower}{
             position: absolute;
@@ -37,7 +37,7 @@
             background-position: 47% center;
             background-size: cover;
             z-index: 5;
-            animation: star-sky-2 2.5s linear infinite;
+            animation: star-sky-2 4s linear infinite;
         }
         &#{-container}{
             @include container;
@@ -203,7 +203,14 @@
             z-index: 4;
             background-position:  55% center;
             pointer-events: none;
-           // animation:star-sky-1 7.5s linear infinite;
+            @include media-max($lg) {
+                background-position: 55% bottom;
+                background-repeat: no-repeat;
+                background-size: 180%;
+            }
+            @include media-max($md) {background-size: 230%;}
+            @include media-max($sm) {background-size: 300%;}
+            @include media-max($xs) {background-size: 400%; background-position:  55% 75%;}
         }
         &#{-bgLower}{
             position: absolute;
@@ -215,13 +222,19 @@
             z-index: 5;
             background-position: 55% center;
             pointer-events: none;
-            transform-origin: 50% 68%;
-            transform: scale(0.01);
-            transition: transform 3s ease;
+            transition: clip-path 3s ease;
+            clip-path: polygon(0 100%,100% 100%,100% 100%,0 100%);
             &.animate{
-                transform: scale(1);
+                clip-path: polygon(0 0,100% 0,100% 100%,0 100%);
             }
-            //animation: star-sky-2 7.5s linear infinite;
+            @include media-max($lg) {
+                background-position: 55% bottom;
+                background-repeat: no-repeat;
+                background-size: 180%;
+            }
+            @include media-max($md) {background-size: 230%;}
+            @include media-max($sm) {background-size: 300%;}
+            @include media-max($xs) {background-size: 400%; background-position:  55% 75%;}
         }
         &#{-container}{
             @include container;
