--- a/src/scss/page/_social.scss
+++ b/src/scss/page/_social.scss
@@ -177,3 +177,11 @@
     }
     
 }
+
+
+.social-main-container-tab-pagination{
+    height: 460px;
+    &.facebook{
+        height: auto;
+    }
+}
