--- a/src/scss/page/_applications.scss
+++ b/src/scss/page/_applications.scss
@@ -32,6 +32,7 @@
             right: 0;
             transform: translate(0 , -50%);
             h2{
+                @include px(3.75rem);
                 max-width: 1140px;
                 margin: 0 auto;
                 width: 100%;
@@ -47,6 +48,7 @@
                 text-shadow: 0.0625rem 0.0625rem 0.25rem rgba(0,0,0,0.8);
             }
             h3{
+                @include px(3.75rem);
                 max-width: 1140px;
                 margin: 0 auto;
                 width: 100%;
