--- a/src/scss/page/_design.scss
+++ b/src/scss/page/_design.scss
@@ -35,7 +35,7 @@
                 text-align: center;
             }
             h2{
-                max-width: 1140px;
+                max-width: 1140px - 120px;
                 margin: 0 auto;
                 width: 100%;
                 @include display-2;
@@ -50,7 +50,7 @@
                 text-shadow: 0.0625rem 0.0625rem 0.25rem rgba(0,0,0,0.8);
             }
             h3{
-                max-width: 1140px;
+                max-width: 1140px - 120px;
                 margin: 0 auto;
                 width: 100%;
                 @include display-5;
@@ -254,9 +254,10 @@
                             text-align: center;
                             display: flex;
                             flex-direction: column;
-                            height: 100%;
                             width: 100%;
+                            height: 100%;
                             .img{
+                                width: 100%;
                                 position: relative;
                                 &.video{
                                     &::before{
@@ -307,8 +308,20 @@
                                     color: #2F353D;
                                     font-size: 0.8125rem;
                                     line-height: 1.25rem;
-                                    max-height: 1.25rem*2;
+                                    max-height: 1.25rem*3;
                                     overflow: hidden;
+                                }
+                            }
+                            &:active{
+                                background-color: #c6d5e9;
+                                h4{
+                                    color: #fff;
+                                }
+                                p{
+                                    color: #fff;
+                                }
+                                a{
+                                    color: #fff;
                                 }
                             }
                             &:hover{
