--- a/src/scss/page/_home.scss
+++ b/src/scss/page/_home.scss
@@ -52,6 +52,7 @@
                 max-width: 1140px;
                 margin: 0 auto;
                 width: 100%;
+                @include px(3.75rem);
                 @include media-max($lg) {
                     text-align: center;
                 }
@@ -83,16 +84,17 @@
         background-color: #000;
         background-position: right center;
         background-repeat: no-repeat;
-
+        background-size: cover;
         height: 100vh;
         position: relative;
-        @include media-max($sm) {
+        overflow: hidden;
+        @include media-max($lg) {
             height: 85vh;
             display: flex;
             flex-direction: column;
         }
         &#{-bg}{
-            @include media-max($sm) {
+            @include media-max($lg) {
                 background-size: cover;
                 background-position: 85% center;
                 flex-grow: 1;
@@ -100,14 +102,15 @@
         }
         &#{-container}{
             @include container;
-            @include media-min($sm) {
+            @include media-min($lg) {
                 position: absolute;
                 left: 50%;
                 top: 50%;
                 transform: translate(-50%,-50%);
             }
-            @include media-max($sm) {
+            @include media-max($lg) {
                 background-color: #000;
+                max-width: 100%;
                 @include py(4rem);
             }
 
@@ -115,6 +118,7 @@
                 max-width: 1140px;
                 margin: 0 auto;
                 width: 100%;
+                @include px(3.75rem);
                 @include media-max($lg) {
                     text-align: center;
                 }
@@ -125,7 +129,7 @@
                     color: #b68b69;
                     padding-top: 0.5rem;
                     margin-bottom: 0.5rem;
-                    @include media-max($md) {
+                    @include media-max($lg) {
                         margin-bottom: 0.5rem;
                     }
                 }
@@ -134,7 +138,7 @@
                     color: #b68b69;
                     line-height: 1.2;
                     margin-bottom: 1rem;
-                    @include media-max($md) {
+                    @include media-max($lg) {
                         margin-bottom: 0.5rem;
                     }
                     
@@ -144,7 +148,7 @@
                     @include button;
                     margin-top: 0.5rem;
                     margin-bottom: 1.5rem;
-                    @include media-max($md) {
+                    @include media-max($lg) {
                         margin-bottom: 0.5rem;
                     }
                 }
@@ -158,7 +162,7 @@
             max-width: 100rem;
             margin: auto;
             width: 100%;
-            @include media-min($lg) {
+            @include media-max($lg) {
                 @include px(4.5rem);
             }
             text-align: center;
@@ -187,55 +191,59 @@
         }
     }
     &#{-sec4}{
-        background-size: cover;
-        background-position: center;
         height: 100vh;
         background-color: #101010;
         position: relative;
-
-        &#{-bgUpper}{
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background-size: cover;
-            z-index: 4;
-            background-position:  55% center;
-            pointer-events: none;
-            @include media-max($lg) {
-                background-position: 55% bottom;
-                background-repeat: no-repeat;
-                background-size: 180%;
-            }
-            @include media-max($md) {background-size: 230%;}
-            @include media-max($sm) {background-size: 300%;}
-            @include media-max($xs) {background-size: 400%; background-position:  55% 75%;}
-        }
-        &#{-bgLower}{
-            position: absolute;
-            top:0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background-size: cover;
-            z-index: 5;
-            background-position: 55% center;
-            pointer-events: none;
-            transition: clip-path 3s ease;
-            clip-path: polygon(0 100%,100% 100%,100% 100%,0 100%);
-            &.animate{
-                clip-path: polygon(0 0,100% 0,100% 100%,0 100%);
-            }
-            @include media-max($lg) {
-                background-position: 55% bottom;
-                background-repeat: no-repeat;
-                background-size: 180%;
-            }
-            @include media-max($md) {background-size: 230%;}
-            @include media-max($sm) {background-size: 300%;}
-            @include media-max($xs) {background-size: 400%; background-position:  55% 75%;}
-        }
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        @include media-max($lg) {height: 90vh; background-position: 70% bottom;}
+        @include media-max($md) {height: 80vh; background-position: 60% bottom;}
+        @include media-max($sm) {height: 65vh;}
+        @include media-max($xs) {height: 50vh;}
+        // &#{-bgUpper}{
+        //     position: absolute;
+        //     top: 0;
+        //     left: 0;
+        //     right: 0;
+        //     bottom: 0;
+        //     background-size: cover;
+        //     z-index: 4;
+        //     background-position:  55% center;
+        //     pointer-events: none;
+        //     @include media-max($lg) {
+        //         background-position: 55% bottom;
+        //         background-repeat: no-repeat;
+        //         background-size: 180%;
+        //     }
+        //     @include media-max($md) {background-size: 230%;}
+        //     @include media-max($sm) {background-size: 300%;}
+        //     @include media-max($xs) {background-size: 400%; background-position:  55% 75%;}
+        // }
+        // &#{-bgLower}{
+        //     position: absolute;
+        //     top:0;
+        //     left: 0;
+        //     right: 0;
+        //     bottom: 0;
+        //     background-size: cover;
+        //     z-index: 5;
+        //     background-position: 55% center;
+        //     pointer-events: none;
+        //     transition: clip-path 3s ease;
+        //     clip-path: polygon(0 100%,100% 100%,100% 100%,0 100%);
+        //     &.animate{
+        //         clip-path: polygon(0 0,100% 0,100% 100%,0 100%);
+        //     }
+        //     @include media-max($lg) {
+        //         background-position: 55% bottom;
+        //         background-repeat: no-repeat;
+        //         background-size: 180%;
+        //     }
+        //     @include media-max($md) {background-size: 230%;}
+        //     @include media-max($sm) {background-size: 300%;}
+        //     @include media-max($xs) {background-size: 400%; background-position:  55% 75%;}
+        // }
         &#{-container}{
             @include container;
                 display: flex;
@@ -251,8 +259,8 @@
                 width: 100%;
                 margin-top: 3rem;
                 margin-bottom: 12rem;
+                @include px(3.75rem);
                 @include media-max($lg) {
-                    
                     text-align: center;
                 }
                 h2{
@@ -304,7 +312,10 @@
             &#{-row}{
                 @include row;
                 @include my(2rem);
-
+                @include media-max($md) {
+                    @include mx(0);
+                    @include px(1rem);
+                }
                 &#{-col}{
                     @include col(100%);
                     @include media-min($lg) {
@@ -335,6 +346,7 @@
                 max-width: 1140px;
                 margin: 0 auto;
                 width: 100%;
+                @include px(3.75rem);
                 @include media-max($lg) {
                     text-align: center;
                 }
