--- a/src/scss/page/_innovation.scss
+++ b/src/scss/page/_innovation.scss
@@ -43,7 +43,7 @@
                 left: 0;
                 right: 0;
                 bottom: -0.125rem;
-                background-color: rgba(0, 0, 0, 0.6);
+                background-color: rgba(0, 0, 0, 0);
             }
         }
 
@@ -60,7 +60,7 @@
             }
 
             h2 {
-                max-width: 1140px;
+                max-width: 1140px - 120px;
                 margin: 0 auto;
                 width: 100%;
                 @include display-2;
@@ -79,7 +79,7 @@
             }
 
             h3 {
-                max-width: 1140px;
+                max-width: 1140px - 120px;
                 margin: 0 auto;
                 width: 100%;
                 @include display-5;
@@ -350,7 +350,6 @@
                     @include my(0.5rem);
 
                     &#{-figure} {
-                        //height: 32rem;
                         @include stretched-link;
                         padding: 0.5rem;
                         width: 100%;
@@ -365,6 +364,7 @@
 
                             .img{
                                 position: relative;
+                                width: 100%;
                                 &.video{
                                     &::before{
                                         content: '';
@@ -419,7 +419,18 @@
                                     overflow: hidden;
                                 }
                             }
-
+                            &:active{
+                                background-color: #c6d5e9;
+                                h4{
+                                    color: #fff;
+                                }
+                                p{
+                                    color: #fff;
+                                }
+                                a{
+                                    color: #fff;
+                                }
+                            }
                             &:hover {
                                 background-color: #c6d5e9;
 
