--- a/src/scss/page/_ourBraud.scss
+++ b/src/scss/page/_ourBraud.scss
@@ -38,7 +38,7 @@
             right: 0;
             transform: translate(0 , -50%);
             h2{
-                max-width: 1140px;
+                max-width: 1140px - 120px;
                 margin: 0 auto;
                 width: 100%;
                 text-shadow: 0.0625rem 0.0625rem 0.25rem rgba(0,0,0,0.8);
