--- a/src/scss/page/_about.scss
+++ b/src/scss/page/_about.scss
@@ -30,6 +30,7 @@ $size-xs: 0.6;
                 @include px(3.75rem);
                 @include media-max($lg) {
                     text-align: center;
+                    @include px(3.25rem);
                 }
 
                 h2{
@@ -441,6 +442,7 @@ $size-xs: 0.6;
             top: 50%;
             left: 50%;
             transform: translate(-50%,100%);
+            font-weight: bolder;
         }
         &:hover{
             button{
@@ -538,6 +540,7 @@ $size-xs: 0.6;
                     a{
                         color: #fff;
                         font-size: 1.5rem;
+                        font-weight: bolder;
                     }
                 }
                 figcaption{
