--- a/src/scss/page/_home.scss
+++ b/src/scss/page/_home.scss
@@ -197,10 +197,10 @@
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
-        @include media-max($lg) {height: 90vh; background-position: 70% bottom;}
-        @include media-max($md) {height: 80vh; background-position: 60% bottom;}
-        @include media-max($sm) {height: 65vh;}
-        @include media-max($xs) {height: 50vh;}
+        @include media-max($lg) {height: 90vh; background-size: 200%; background-position: 70% bottom;}
+        @include media-max($md) {height: 80vh; background-size: 180%; background-position: 60% bottom;}
+        @include media-max($sm) {height: 65vh; background-size: 240%; }
+        @include media-max($xs) {height: 50vh; background-size: 200%; }
         // &#{-bgUpper}{
         //     position: absolute;
         //     top: 0;
