--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2663,8 +2663,8 @@ footer {
 
 .home-sec3 {
   background-color: #333a44;
-  padding-top: 3.5rem;
-  padding-bottom: 3.5rem;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
 }
 
 .home-sec3-container {
@@ -2685,7 +2685,7 @@ footer {
   color: #fdfcfc;
   font-weight: bolder;
   margin-bottom: 0.5rem;
-  padding-top: 1.125rem;
+  padding-top: 1rem;
 }
 
 @media (min-width: 350px) {
@@ -3029,8 +3029,8 @@ footer {
 
 .home-sec5 {
   background-color: #707882;
-  padding-top: 5rem;
-  padding-bottom: 5rem;
+  padding-top: 4rem;
+  padding-bottom: 4rem;
 }
 
 .home-sec5-container {
@@ -7121,7 +7121,7 @@ footer {
   left: 0;
   right: 0;
   bottom: -0.125rem;
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: rgba(0, 0, 0, 0);
 }
 
 #banner-applications .silck-item .silck-item-heading {
@@ -7926,6 +7926,56 @@ footer {
   -webkit-transform: translate(-0.3rem, 0.35rem) rotate(-65deg);
           transform: translate(-0.3rem, 0.35rem) rotate(-65deg);
   left: 50%;
+}
+
+.gotop {
+  position: fixed;
+  bottom: 1rem;
+  right: 1rem;
+}
+
+.gotop button {
+  background-color: #c2bfcb;
+  width: 2rem;
+  height: 2rem;
+  z-index: 900;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  opacity: 0.75;
+  border-radius: 0.5rem;
+  border: 0;
+}
+
+.gotop button::after {
+  content: '';
+  position: absolute;
+  background-color: #fff;
+  top: 50%;
+  border-radius: 0.25rem;
+  width: 0.625rem;
+  height: 0.125rem;
+  opacity: 1;
+  -webkit-transform: translate(0.5rem, -0.125rem) rotate(45deg);
+          transform: translate(0.5rem, -0.125rem) rotate(45deg);
+  right: 50%;
+}
+
+.gotop button::before {
+  content: '';
+  position: absolute;
+  background-color: #fff;
+  top: 50%;
+  border-radius: 0.25rem;
+  width: 0.625rem;
+  height: 0.125rem;
+  opacity: 1;
+  -webkit-transform: translate(0.125rem, -0.125rem) rotate(-45deg);
+          transform: translate(0.125rem, -0.125rem) rotate(-45deg);
+  right: 50%;
+}
+
+.gotop button:hover {
+  opacity: 1;
 }
 
 .knowledge-sec1 {
